# gecko-b2g

./: .eslintignore  .gitignore  .gitlab-ci.yml  .prettierignore  .taskcluster.yml  Cargo.toml  Makefile.in  build-b2g.sh  build-b2g_m.sh  check-format.sh  configure.py  gdb-b2g.sh  gonk.md  moz.build  moz.configure  mozconfig-b2g  mozconfig-b2g-desktop  mozconfig-graphene  mozconfig-quetzal  old-configure.in  package-lock.json  prepare-gdb-syms.sh  push-b2g.sh
accessible/: moz.build
b2g/: common.configure  confvars.sh  moz.build  moz.configure
b2g/sidl/gecko_sidl/: Cargo.toml  update_fingerprints.sh
b2g/sidl/gecko_sidl/src/: lib.rs
b2g/sidl/gecko_sidl/src/common/: client_object.rs  connection_observer.rs  core.rs  daemon_manager.rs  default_response.rs  event_manager.rs  frame.rs  mod.rs  sidl_task.rs  traits.rs  uds_transport.rs
b2g/sidl/gecko_sidl/src/services/: mod.rs
b2g/sidl/gecko_sidl/src/services/bridge/: apps_service_delegate.rs  card_info_manager_delegate.rs  messages.rs  mobile_manager_delegate.rs  mod.rs  network_manager_delegate.rs  power_manager_delegate.rs  preference_delegate.rs  service.rs  sim_contact_info.rs
b2g/sidl/gecko_sidl/src/services/contacts/: blocked_number_find_options.rs  messages.rs  mod.rs  service.rs
b2g/sidl/gecko_sidl/src/services/core/: mod.rs  service.rs
b2g/sidl/gecko_sidl/src/services/settings/: messages.rs  mod.rs  observer.rs  service.rs  setting_error.rs  setting_info.rs
b2g/sidl/gecko_sidl/src/services/time/: messages.rs  mod.rs  observer.rs  service.rs  time_info.rs
caps/: BasePrincipal.cpp  BasePrincipal.h  (+2 more)
(+3152 files in other folders)
