[package]
name = "gecko_sidl"
version = "0.1.0"
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
byteorder = "1.3"
cstr = "0.2"
log = "0.4"
moz_task = { path = "../../../xpcom/rust/moz_task" }
nserror = { path = "../../../xpcom/rust/nserror" }
nsstring = { path = "../../../xpcom/rust/nsstring" }
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thin-vec = { version = "0.2.1", features = ["gecko-ffi"] }
thiserror = "1.0"
xpcom = { path = "../../../xpcom/rust/xpcom" }
